unpackaged/main/default/objects/RFI_Detail__c/fields/Account_Plant__c.field-meta.xml
<CustomField>
    <fullName>Account_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plant</label>
    <referenceTo>Account_Plant__c</referenceTo>
    <relationshipLabel>RFI Items</relationshipLabel>
    <relationshipName>RFI_Details</relationshipName>
    <type>Lookup</type>
</CustomField>