unpackaged/main/default/objects/RFI_Detail__c/fields/Additional_RFI_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Additional_RFI_Item_Description__c</fullName>
    <label>Additional RFI Item Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>