unpackaged/main/default/objects/RFI_Detail__c/fields/Assigned_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact for Onboarding</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RFI Items</relationshipLabel>
    <relationshipName>RFI_Items</relationshipName>
    <type>Lookup</type>
</CustomField>