unpackaged/main/default/objects/RFI_Detail__c/fields/Cancel_Cannot_Complete_Description__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Cannot_Complete_Description__c</fullName>
    <label>Cancel/Cannot Complete Description</label>
    <type>TextArea</type>
</CustomField>