unpackaged/main/default/objects/RFI_Detail__c/fields/Category_Classification__c.field-meta.xml
<CustomField>
    <fullName>Category_Classification__c</fullName>
    <label>Category Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>