unpackaged/main/default/objects/RFI_Detail__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing/Incomplete Data</fullName>
                <default>true</default>
                <label>Missing/Incomplete Data</label>
            </value>
            <value>
                <fullName>Incorrect Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>