unpackaged/main/default/objects/RFI_Detail__c/fields/Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comments__c</fullName>
    <label>Customer Comments</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>