unpackaged/main/default/objects/RFI_Detail__c/fields/Drive_Pro_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Drive_Pro_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drive Pro Requirement</label>
    <type>Checkbox</type>
</CustomField>