unpackaged/main/default/objects/RFI_Detail__c/fields/Incomplete_Information_Desc__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Information_Desc__c</fullName>
    <label>Incomplete Information Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>