unpackaged/main/default/objects/RFI_Detail__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <formula>OR(
CONTAINS(&#39;Closed;Cannot Complete;Canceled;&#39;, TEXT( RFI_Item_Status__c)) ,
(NOT(Is_Requestor__c) &amp;&amp; ISPICKVAL(RFI_Item_Status__c, &#39;Submitted&#39;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>