unpackaged/main/default/objects/RFI_Detail__c/fields/Is_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Is_Requestor__c</fullName>
    <formula>OR(
ISPICKVAL($User.UserType,&#39;Standard&#39;),
$Profile.Name = &#39;PF Partner User&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Requestor</label>
    <type>Checkbox</type>
</CustomField>