unpackaged/main/default/objects/RFI_Detail__c/fields/Logged_In_COC_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_COC_User__c</fullName>
    <formula>IF( RFI_Detail_Owner__c = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In COC User</label>
    <type>Checkbox</type>
</CustomField>