unpackaged/main/default/objects/RFI_Detail__c/fields/Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_User__c</fullName>
    <formula>IF( IE_Owner__c = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in User</label>
    <type>Checkbox</type>
</CustomField>