unpackaged/main/default/objects/RFI_Detail__c/fields/Missing_Incomplete_Category__c.field-meta.xml
<CustomField>
    <fullName>Missing_Incomplete_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Missing/Incomplete Category</label>
    <referenceTo>RFI_Categories__c</referenceTo>
    <relationshipLabel>RFI Items (Missing/Incomplete Category)</relationshipLabel>
    <relationshipName>RFI_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>