unpackaged/main/default/objects/RFI_Detail__c/fields/Onsite_Remediation_Required__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Remediation_Required__c</fullName>
    <label>Onsite Remediation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>