unpackaged/main/default/objects/RFI_Detail__c/fields/RAID__c.field-meta.xml
<CustomField>
    <fullName>RAID__c</fullName>
    <label>RAID</label>
    <referenceTo>RAID__c</referenceTo>
    <relationshipLabel>RFI Item</relationshipLabel>
    <relationshipName>RFI_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>