unpackaged/main/default/objects/RFI_Detail__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Taking reference of &#39;request type&#39; field on RFI Item from RFI Category</description>
    <formula>TEXT( RFI_Category__r.Request_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Type</label>
    <type>Text</type>
</CustomField>