unpackaged/main/default/objects/RFI_Detail__c/fields/RFI_Category__c.field-meta.xml
<CustomField>
    <fullName>RFI_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI Category</label>
    <referenceTo>RFI_Categories__c</referenceTo>
    <relationshipLabel>RFI Items (RFI Category)</relationshipLabel>
    <relationshipName>RFI_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>