unpackaged/main/default/objects/RFI_Detail__c/fields/RFI_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>RFI_Category_Type__c</fullName>
    <label>RFI Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>