unpackaged/main/default/objects/RFI_Detail__c/fields/RFI_Detail_Description__c.field-meta.xml
<CustomField>
    <fullName>RFI_Detail_Description__c</fullName>
    <label>RFI Item Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>