unpackaged/main/default/objects/RFI_Detail__c/fields/RFI_Detail_Owner__c.field-meta.xml
<CustomField>
    <fullName>RFI_Detail_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFI_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>