unpackaged/main/default/objects/RFI_Detail__c/fields/RFI_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>RFI_Item_Status__c</fullName>
    <label>RFI Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drafting</fullName>
                <default>true</default>
                <label>Drafting</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Needs Detail</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Cannot Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>