unpackaged/main/default/objects/RFI_Detail__c/fields/RFI_Item_Subtype__c.field-meta.xml
<CustomField>
    <fullName>RFI_Item_Subtype__c</fullName>
    <label>RFI Item Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>