unpackaged/main/default/objects/RFI_Detail__c/fields/RFI_Number__c.field-meta.xml
<CustomField>
    <fullName>RFI_Number__c</fullName>
    <label>RFI Name</label>
    <referenceTo>RFI__c</referenceTo>
    <relationshipLabel>RFI Items</relationshipLabel>
    <relationshipName>RFI_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>