unpackaged/main/default/objects/RFI_Detail__c/validationRules/Community_User_Not_Allowed_To_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_User_Not_Allowed_To_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISCHANGED( Customer_Comments__c),
ISCHANGED(RFI_Item_Status__c),
ISCHANGED( Name )),
$User.ContactId &lt;&gt; NULL,
OR(ISPICKVAL(PRIORVALUE(RFI_Item_Status__c),&quot;Closed&quot;),
ISPICKVAL(PRIORVALUE(RFI_Item_Status__c),&quot;Cannot Complete&quot;),
ISPICKVAL(PRIORVALUE(RFI_Item_Status__c),&quot;Canceled&quot;)))</errorConditionFormula>
    <errorMessage>You cannot edit Closed RFI Item. Please contact the PF Owner</errorMessage>
</ValidationRule>