unpackaged/main/default/objects/RFI_Detail__c/validationRules/Due_Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( RFI_Item_Status__c , &quot;Closed&quot;),
ISCHANGED( Due_Date__c ) )</errorConditionFormula>
    <errorMessage>Cannot save Due Date since RFI Item is closed</errorMessage>
</ValidationRule>