unpackaged/main/default/objects/RFI_Detail__c/validationRules/Onsite_Remediation_Required_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Onsite_Remediation_Required_Rule</fullName>
    <active>true</active>
    <description>If Onsite Remediation Required is &#39;Yes&#39;,Then &#39;Onsite Remediation Instructions’ is must</description>
    <errorConditionFormula>AND( ISPICKVAL( Onsite_Remediation_Required__c ,&#39;Yes&#39;),
LEN( Onsite_Remediation_Description__c )= 0
)</errorConditionFormula>
    <errorMessage>&#39;Onsite Remediation Description&#39; is must</errorMessage>
</ValidationRule>