unpackaged/main/default/objects/RFI_Detail__c/validationRules/RFI_Status_field_Change_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>RFI_Status_field_Change_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(LEN
( Cancel_Cannot_Complete_Description__c ) = 0,
ISPICKVAL(RFI_Item_Status__c , &#39;Cannot Complete&#39;)
)</errorConditionFormula>
    <errorDisplayField>Cancel_Cannot_Complete_Description__c</errorDisplayField>
    <errorMessage>Cancel/Cannot Complete Description&#39; is required.</errorMessage>
</ValidationRule>